--- a/index.html
+++ b/index.html
@@ -9,30 +9,25 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/31ff4c85db.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-                <nav class="navBarMobile">
+        <nav class="navBarMobile">
             <div class="brand"><img src="./img/marcaFondoTransp.png" alt=""></div>
             <div id="toggle">
                 <div class="one"></div>
                 <div class="two"></div>
                 <div class="three"></div>
             </div>
-            <div class="menuCelu" id="menu">
-                <div><a class="itemMenuCelu" href="#seccionUno"> PRIMERA</a></div>
-                <div><a class="itemMenuCelu" href="#seccionDos"> SEGUNDA</a></div>
-                <div><a class="itemMenuCelu" href="#seccionTres"> TERCERA</a></div>
-                <div><a class="itemMenuCelu" href="#seccionCuatro">CUARTA</a></div>
-                <div><a class="itemMenuCelu" href="#seccionCinco">QUINTA</a></div>
+            <div class="menuMobile" id="menu">
+                <div><a class="itemMenuMobile" href="#seccionUno"> PRIMERA</a></div>
+                <div><a class="itemMenuMobile" href="#seccionDos"> SEGUNDA</a></div>
+                <div><a class="itemMenuMobile" href="#seccionTres"> TERCERA</a></div>
+                <div><a class="itemMenuMobile" href="#seccionCuatro">CUARTA</a></div>
+                <div><a class="itemMenuMobile" href="#seccionCinco">QUINTA</a></div>
                 <div class="socialMedia">
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -44,27 +39,20 @@
                 </div>
             </div>
         </nav>
-
     </header>
+
     <main id="seccionUno" class="seccionPrimera">
-        <article>
-            <h2></h2>
-            <img src="./img/marcaFondoTransp.png" alt="">
-        </article>
     </main>
-    <div class="containerNavBar">
-        <nav class="navBar">
-            <div class="itemsNavBar">
-                <a class="itemMenu" href="#seccionUno"> PRIMERA</a>
-                <a class="itemMenu" href="#seccionDos"> SEGUNDA</a>
-                <a class="itemMenu" href="#seccionTres"> TERCERA</a>
-                <a class="itemMenu" href="#seccionCuatro">CUARTA</a>
-                <a class="itemMenu" href="#seccionCinco">QUINTA</a>
-            </div>
-        </nav>
-
-    </div>
-
+    <nav class="navBar" id="navbar-desktop">
+        <div class="itemsNavBar">
+            <a class="itemMenu" href="#seccionUno"> PRIMERA</a>
+            <a class="itemMenu" href="#seccionDos"> SEGUNDA</a>
+            <a class="itemMenu" href="#seccionTres"> TERCERA</a>
+            <a class="itemMenu" href="#seccionCuatro">CUARTA</a>
+            <a class="itemMenu" href="#seccionCinco">QUINTA</a>
+        </div>
+    </nav>
+    
 
     <section id="seccionDos" class="seccionSegunda">
         <article>
