cambios en el diseño mobile del navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navBarMobile">
-            <div class="brand"><img src="./img/marcaFondoTransp.png" alt=""></div>
+            <div class="brand"><img src="./img/icon.svg" alt=""></div>
             <div id="toggle">
                 <div class="one"></div>
                 <div class="two"></div>
@@ -42,9 +42,11 @@
     </header>
 
     <main id="seccionUno" class="seccionPrimera">
+        <img src="./img/marca.svg" alt="">
     </main>
     <nav class="navBar" id="navbar-desktop">
         <div class="itemsNavBar">
+            <a href="" class="itemMenu item-icon"><img src="./img/icon.svg" alt=""></a>
             <a class="itemMenu" href="#seccionUno"> PRIMERA</a>
             <a class="itemMenu" href="#seccionDos"> SEGUNDA</a>
             <a class="itemMenu" href="#seccionTres"> TERCERA</a>
